// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`links get wrapped in anchors 1`] = `
<body>
  <dt-article
    class="centered"
  >
    <p>
      http link: 
      <a
        href="http://link.co.uk/to#something"
        class="uri"
      >
        http://link.co.uk/to#something
      </a>
    </p>
    <p>
      https link: 
      <a
        href="https://link.info?param"
        class="uri"
      >
        https://link.info?param
      </a>
      url
    </p>
    <p>
      link with trailing period: 
      <a
        href="https://example.com"
        class="uri"
      >
        https://example.com
      </a>
      .
    </p>
    <p>
      this should not make a link: foo.bar
    </p>
    <p>
      this is a link without leading space: badlatex.
      <a
        href="http://example.com"
        class="uri"
      >
        http://example.com
      </a>
    </p>
    <p>
      this is already a link: 
      <a
        href="http://example.com"
      >
        example.com
      </a>
    </p>
  </dt-article>
  <dt-appendix>
    <div
      class="l-body"
    />
  </dt-appendix>
  <div
    id="footnote-hover-boxes-container"
  />
</body>
`;

exports[`lists render correctly 1`] = `
<body>
  <dt-article
    class="centered"
  >
    <ul>
      <li>
        <p>
          An unordered list
        </p>
      </li>
      <li>
        <p>
          Second item
        </p>
      </li>
    </ul>
    <ol>
      <li>
        <p>
          An ordered list
        </p>
      </li>
      <li>
        <p>
          Second one.
        </p>
      </li>
    </ol>
    <ul>
      <li>
        <p>
          A nested unordered list
        </p>
        <ul>
          <li>
            <p>
              First nested item
            </p>
          </li>
          <li>
            <p>
              Second nested item
            </p>
          </li>
        </ul>
      </li>
      <li>
        <p>
          Second item
        </p>
      </li>
    </ul>
    <h2
      id="section-1"
    >
      <span
        class="section-number"
      >
        <a
          href="#section-1"
        >
          1
        </a>
      </span>
      A nested ordered list
    </h2>
    <ol>
      <li>
        <p>
          First item
        </p>
        <ol>
          <li>
            <p>
              First nested item
            </p>
          </li>
          <li>
            <p>
              Second nested item
            </p>
          </li>
        </ol>
      </li>
      <li>
        <p>
          Second item
        </p>
      </li>
    </ol>
  </dt-article>
  <dt-appendix>
    <div
      class="l-body"
    />
  </dt-appendix>
  <div
    id="footnote-hover-boxes-container"
  />
</body>
`;

exports[`pdfoutput=1 is ignored 1`] = `
<body>
  <dt-article
    class="centered"
  >
    <p>
      hello world
    </p>
  </dt-article>
  <dt-appendix>
    <div
      class="l-body"
    />
  </dt-appendix>
  <div
    id="footnote-hover-boxes-container"
  />
</body>
`;

exports[`pinforms3 TITLE, AUTHOR, AFF are supported 1`] = `
<body>
  <dt-article
    class="centered"
  >
    <h1
      class="title"
    >
      The Title of the Paper
    </h1>
    <dt-byline>
      <div
        class="byline"
      >
        <div
          class="authors"
        >
          
        </div>
      </div>
    </dt-byline>
    <div
      class="authors"
    >
      <p>
        <span>
          <span
            class="author"
          >
            <span>
              Author Name
            </span>
          </span>
          <span
            class="affiliation"
          >
            <span>
              Author Affiliation
            </span>
          </span>
        </span>
      </p>
      <p>
        hello world
      </p>
    </div>
  </dt-article>
  <dt-appendix>
    <div
      class="l-body"
    />
  </dt-appendix>
  <div
    id="footnote-hover-boxes-container"
  />
</body>
`;

exports[`text formatting renders correctly 1`] = `
<body>
  <dt-article
    class="centered"
  >
    <p>
      This is 
      <strong>
        bold
      </strong>
      .
    </p>
    <p>
      This is 
      <em>
        textit
      </em>
      .
    </p>
    <p>
      This is 
      <em>
        emph
      </em>
      .
    </p>
    <p>
      This is 
      <a
        href="https://www.example.com"
      >
        a link
      </a>
      .
    </p>
    <p>
      This is 
      <code>
        fixed width
      </code>
      .
    </p>
  </dt-article>
  <dt-appendix>
    <div
      class="l-body"
    />
  </dt-appendix>
  <div
    id="footnote-hover-boxes-container"
  />
</body>
`;

exports[`vskip is ignored 1`] = `
<body>
  <dt-article
    class="centered"
  >
    <p>
      before
    </p>
    <p>
      after
    </p>
  </dt-article>
  <dt-appendix>
    <div
      class="l-body"
    />
  </dt-appendix>
  <div
    id="footnote-hover-boxes-container"
  />
</body>
`;
